; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-throttle.c___throtl_dequeue_tg.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-throttle.c___throtl_dequeue_tg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.throtl_grp = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@THROTL_TG_PENDING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.throtl_grp*)* @__throtl_dequeue_tg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__throtl_dequeue_tg(%struct.throtl_grp* %0) #0 {
  %2 = alloca %struct.throtl_grp*, align 8
  store %struct.throtl_grp* %0, %struct.throtl_grp** %2, align 8
  %3 = load %struct.throtl_grp*, %struct.throtl_grp** %2, align 8
  %4 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %3, i32 0, i32 2
  %5 = load %struct.throtl_grp*, %struct.throtl_grp** %2, align 8
  %6 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @throtl_rb_erase(i32* %4, i32 %8)
  %10 = load i32, i32* @THROTL_TG_PENDING, align 4
  %11 = xor i32 %10, -1
  %12 = load %struct.throtl_grp*, %struct.throtl_grp** %2, align 8
  %13 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = and i32 %14, %11
  store i32 %15, i32* %13, align 4
  ret void
}

declare dso_local i32 @throtl_rb_erase(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
